--- a/xmonad.desktop
+++ b/xmonad.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 Name=XMonad
-Exec=xmonad
+Exec=/usr/bin/xmonad-start
 NoDisplay=true
 # name we put on the WM spec check window
 X-GNOME-WMName=Xmonad
