--- a/xmonad-gnome-session.desktop
+++ b/xmonad-gnome-session.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=xmonad GNOME
+Name=xmonad-gnome
 Comment=Tiling window manager
 TryExec=/usr/bin/gnome-session
 Exec=gnome-session --session=xmonad
